<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/fragment_background"
    android:fitsSystemWindows="true"
    android:orientation="vertical" >

    <android.support.v7.widget.Toolbar
        android:id="@+id/my_awesome_toolbar"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:minHeight="?attr/actionBarSize"
        android:background="?attr/colorPrimary">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textSize="@dimen/title_size"
            android:textColor="@android:color/white"
            android:text="@string/about"/>
        </android.support.v7.widget.Toolbar>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical" >

        <ImageView
            android:id="@+id/ivAbout"
            android:layout_width="96dp"
            android:layout_height="96dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="50dp"
            android:src="@mipmap/ic_launcher" />
        
        <TextView
            android:id="@+id/about_version"
            android:text="text"
            android:gravity="center_horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="50dp"
            android:layout_marginTop="10dp"
            android:textColor="@color/main_title_normal"
            android:textSize="12sp"/>

        <TextView
            android:text="@string/thanks"
            android:gravity="center_horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:layout_marginTop="20dp"
            android:textColor="@color/main_title_normal"
            android:textSize="18sp"/>
        <com.tonyhu.cookbook.widget.VerticalScrollTextView
            android:id="@+id/thanks"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:layout_gravity="center_horizontal"
            android:textColor="@color/main_title_normal"
            android:text="@string/thanks_content" />
        <TextView
            android:id="@+id/reward"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:gravity="center"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="50dp"
            android:textColor="@android:color/white"
            android:background="@drawable/selector_rewardbutton_bg"
            android:stateListAnimator="@animator/touch_raise"
            android:text="@string/reward" />
        <TextView
            android:text="@string/reward_tip"
            android:gravity="center_horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_gravity="center_horizontal"
            android:textColor="@color/main_title_normal"
            android:textSize="12sp"/>
    </LinearLayout>

</LinearLayout>