<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/fragment_background"
    android:fitsSystemWindows="true"
    android:orientation="vertical" >

    <android.support.v7.widget.Toolbar
        android:id="@+id/my_awesome_toolbar"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:minHeight="?attr/actionBarSize"
        android:background="?attr/colorPrimary">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textSize="@dimen/title_size"
            android:textColor="@android:color/white"
            android:text="@string/reward_tip"/>
    </android.support.v7.widget.Toolbar>
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical" >

            <TextView
                android:text="@string/scan_for_reward"
                android:gravity="center_horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:layout_marginTop="20dp"
                android:textColor="@color/main_title_normal"
                android:textSize="12sp"/>

            <ImageView
                android:id="@+id/wechat_qrcode"
                android:layout_width="200dp"
                android:layout_height="200dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="5dp"
                android:src="@drawable/qrcode_for_reward" />

            <TextView
                android:id="@+id/only_one"
                android:text="@string/only_one_phone"
                android:gravity="center_horizontal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="30dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="5dp"
                android:textStyle="italic"
                android:autoLink="all"
                android:layout_gravity="end|right"
                android:textColor="@color/color_primary_dark"
                android:textSize="12sp"/>

            <LinearLayout
                android:id="@+id/help_container"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:visibility="gone">
                <Button
                    android:id="@+id/btn_save_qrcode"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:background="@color/color_primary"
                    android:textColor="@android:color/white"
                    android:paddingLeft="5dp"
                    android:paddingRight="5dp"
                    android:text="@string/save_qrcode"/>
                <TextView
                    android:text="@string/after_save_qrcode"
                    android:gravity="center_horizontal"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginRight="5dp"
                    android:textStyle="italic"
                    android:autoLink="all"
                    android:layout_gravity="center"
                    android:textColor="@color/color_primary_dark"
                    android:textSize="12sp"/>
                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/scan_qrcode_from"
                    android:layout_gravity="center_horizontal"/>
                <TextView
                    android:text="@string/click_right_top"
                    android:gravity="center_horizontal"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginRight="5dp"
                    android:textStyle="italic"
                    android:autoLink="all"
                    android:layout_gravity="center"
                    android:textColor="@color/color_primary_dark"
                    android:textSize="12sp"/>
                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/scan_select_file"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="10dp"/>

            </LinearLayout>

        </LinearLayout>
    </ScrollView>
</LinearLayout>