<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:clipChildren="false"
    android:fitsSystemWindows="true"
    android:background="@color/fragment_background">
    <android.support.v7.widget.Toolbar
        android:id="@+id/my_toolbar"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:maxHeight="?attr/actionBarSize"
        android:background="?attr/colorPrimary">
        <LinearLayout
            android:id="@+id/expanded_menu"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="10dp"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            >
            <EditText
                android:id="@+id/keyword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="left|center_vertical"
                android:drawablePadding="15dp"
                android:layout_marginLeft="5dp"
                android:padding="2dp"
                android:gravity="center_vertical"
                android:drawableLeft="@drawable/ic_search_black_24dp"
                android:textColor="#666666"
                android:hint="@string/search_hint"
                android:maxLines="1"
                android:singleLine="true"
                android:inputType="text"
                android:imeOptions="actionSearch"
                android:layout_weight="1"
                android:textSize="14sp"
                android:textColorHint="@color/hint_color"
                android:background="@drawable/shape_round_corner_white"/>
            <TextView
                android:id="@+id/cancel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="right|center_vertical"
                android:layout_weight="5"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:textColor="@android:color/white"
                android:gravity="center_vertical"
                android:text="@string/cancel"/>
        </LinearLayout>

    </android.support.v7.widget.Toolbar>
    <LinearLayout
        android:id="@+id/no_result"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_below="@id/my_toolbar"
        android:layout_marginTop="50dp"
        android:visibility="gone">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/no_result"
            android:textColor="@color/main_title_normal"
            android:gravity="center_horizontal"/>
        <com.tonyhu.cookbook.widget.Pendulum
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </LinearLayout>

    <android.support.v7.widget.RecyclerView
        android:id="@+id/listview"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/my_toolbar"
        android:visibility="gone"/>
</RelativeLayout>
