<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_height="match_parent"
    android:layout_width="match_parent">
    <com.tonyhu.cookbook.widget.TonyScrollView
        android:id="@+id/rootview"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingBottom="60dp">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@android:color/white"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/detail_banner"
                android:layout_width="match_parent"
                android:layout_height="300dp"
                android:layout_alignParentTop="true"
                android:layout_margin="0dp"
                android:scaleType="centerCrop"
                />

            <TextView
                android:id="@+id/detail_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="title"
                android:layout_marginTop="10dp"
                android:textSize="24sp"
                android:textColor="@color/detail_title"
                android:layout_below="@id/detail_banner"
                android:paddingLeft="@dimen/padding_detail"/>


            <LinearLayout
                android:id="@+id/layout_material"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/detail_title"
                android:layout_marginTop="20dp"
                android:orientation="vertical"
                android:paddingRight="@dimen/padding_detail"
                android:paddingLeft="@dimen/padding_detail">
                <TextView
                    android:id="@+id/detail_material"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/detail_title"
                    android:textSize="24sp"
                    android:textStyle="italic"
                    android:text="@string/detail_material"/>
                <android.support.v7.widget.RecyclerView
                    android:id="@+id/detail_recycleview_material"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/layout_material"
                android:layout_marginTop="20dp"
                android:orientation="vertical"
                android:paddingRight="@dimen/padding_detail"
                android:paddingLeft="@dimen/padding_detail"
                android:layout_marginBottom="@dimen/padding_detail">
                <TextView
                    android:id="@+id/detail_steps"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/detail_title"
                    android:textSize="24sp"
                    android:textStyle="italic"
                    android:text="@string/detail_steps"/>
                <android.support.v7.widget.RecyclerView
                    android:id="@+id/detail_recycleview_steps"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>
            </LinearLayout>
            <ImageView
                android:id="@+id/detail_addFavorite"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/remove_favorite"
                android:layout_below="@id/detail_banner"
                android:layout_marginTop="30dp"
                android:layout_alignParentRight="true"
                android:foreground="?android:attr/selectableItemBackground"
                android:paddingRight="@dimen/padding_detail"/>
            <TextView
                android:id="@+id/addfav_anim"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_above="@id/detail_addFavorite"
                android:layout_alignLeft="@id/detail_addFavorite"
                android:layout_alignRight="@id/detail_addFavorite"
                android:gravity="center"
                android:text="@string/add_favorite"
                android:textColor="#FF0000"
                android:textSize="14dp"
                android:visibility="gone" />
        </RelativeLayout>
    </com.tonyhu.cookbook.widget.TonyScrollView>
    <LinearLayout
        android:id="@+id/my_toolbar"
        android:layout_height="?attr/actionBarSize"
        android:layout_width="match_parent"
        android:maxHeight="?attr/actionBarSize"
        android:background="@android:color/transparent">
        <TextView
            android:id="@+id/title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal|bottom"
            android:gravity="center_horizontal|bottom"
            android:textColor="@android:color/transparent"
            android:textSize="20sp"
            android:layout_marginBottom="2dp"/>
    </LinearLayout>
    <LinearLayout
        android:id="@+id/bannerview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:orientation="vertical">
    </LinearLayout>
</FrameLayout>